--- a/src/main/resources/templates/mj/seller/itemimage/selectlist.html
+++ b/src/main/resources/templates/mj/seller/itemimage/selectlist.html
@@ -67,7 +67,7 @@
                                     style="width: 400px; height: 500px;"> <br>
                                 </div>
                                 
-                                <form thz:action="@{/seller/itemimage/insertimage.do(image=0)}" method="post"
+                                <form th:action="@{/seller/itemimage/insertimage.do(image=0)}" method="post"
                                     enctype="multipart/form-data" id="form0" style="width:200px; margin-top: 0;">
                                     <input type="hidden" name="item.no" th:value="${item.no}" /><br>
                                     <input type="file" name="tmpFile" accept="image/*" id="file"
