--- a/src/main/resources/templates/mj/seller/iteminsert.html
+++ b/src/main/resources/templates/mj/seller/iteminsert.html
@@ -77,25 +77,25 @@
                     <!-- 소분류코드 파라미터전달받기 hidden-->
                     <input type="hidden" name="scategoryCode" id="scode" th:value=${param.scate} />
 
-                    <div class="input-group mb-3">
+                    <div class="input-group mb-3" id="hiddenName" hidden>
                         <span class="input-group-text" id="basic-addon1">물품명</span>
                         <input type="text" name="name" class="form-control" id="name" aria-label="Itemname"
-                            aria-describedby="basic-addon1" onblur="insertname(this)">
+                            aria-describedby="basic-addon1" onkeydown="insertname()" >
                     </div>
-                    <div class="input-group mb-3">
+                    <div class="input-group mb-3" id="hiddenPrice" hidden>
                         <span class="input-group-text" id="basic-addon1">가격</span>
                         <input type="number" name="price" class="form-control" id="price" aria-label="Itemname"
-                            aria-describedby="basic-addon1" onblur="insertname(this)">
+                            aria-describedby="basic-addon1" onkeydown="insertname()" >
                     </div>
-                    <div class="input-group mb-3">
+                    <div class="input-group mb-3" id="hiddenQuantity" hidden>
                         <span class="input-group-text" id="basic-addon1">수량</span>
                         <input type="number" name="quantity" class="form-control" id="quantity" aria-label="Itemname"
-                            aria-describedby="basic-addon1" onblur="insertname(this)">
+                            aria-describedby="basic-addon1" onkeydown="insertname()" >
                     </div>
                     <div class="input-group mb-3" style="display: none;">
                         <span class="input-group-text" id="basic-addon1">사업자번호</span>
                         <input type="number" name="regNo" th:value="${sellerid}" class="form-control" id="regNo"
-                            aria-label="Itemname" aria-describedby="basic-addon1" onblur="insertname(this)">
+                            aria-label="Itemname" aria-describedby="basic-addon1" onkeypress="insertname()">
                     </div>
                     <!-- ==================================== -->
                     <!-- <input type="text" th:value="${ret.no}" id="itemno"> -->
@@ -272,21 +272,26 @@
 
 
         async function insertname() {
-            const code = document.getElementById("LcateSelect").value;
+            const code = document.getElementById("LcateSelect");
             const ScateSelect = document.getElementById("ScateSelect");
+            
             let url = /*[[@{/api/seller/scodechk.json}]]*/"";
             console.log(url);
             url += "?scode=" + ScateSelect.value;
             const headers = { "Content-Type": "application/json" };
             const { data } = await axios.get(url, { headers: headers });
             console.log(data.result);
-            if (data.result === 0) {
+            if (data.result == 0) {
+
                 alert('카테고리를 선택해주세요.');
                 code.focus();
                 return false;
-            } else if (data.result === 1) {
-                return false;
+            } else if (data.result == 1) {
+                document.getElementById("hiddenName").hidden = false;
+                document.getElementById("hiddenPrice").hidden = false;
+                document.getElementById("hiddenQuantity").hidden = false;
             }
+            
 
         }
 
